www/CSS/dreams.css
/* ... */
#sidebar div{

    margin: 10%;
    cursor: pointer;
}
#sidebar .br{
    width: auto;
    background-color: var(--color2);
}
.flex{
    display: flex;
}
.flex>*{
    flex: 1;
}
.w1{
    width: 100%;
}
.w5{
    width: 50%;
}

/* ==== ELEMNTS STYLED WITH BEM NAMING SCHEMA https://en.bem.info/methodology/css/ === */

/* profileInfo */
.profileInfo {
    text-align: left;
    flex-basis: 25%;
    flex-grow: 0;
    max-width: 100%;
}
.profileInfo__photo{
    display: block;
    width: 150px;
    margin: 0 !important;
     /*^ I hate this but its needed TEMP */
}
.profileInfo__userName{
    cursor: pointer;
    margin-top: 15px;
    margin-bottom: 40px;
    position: relative;
    padding-bottom: 15px;
    font-size: 24px;
    font-weight: 700;

}
.profileInfo__userName > label{
    font-weight: bold;
}
.profileInfo__userName:hover{
    color: var(--color4);
}
.profileInfo__userName:before{
    content: "";
    width: 65px;
    height: 1px;
    border-bottom: 1px solid var(--color1);
    position: absolute;
    bottom: 0;
}
.profileInfo__userName--edit:hover{
    color: var(--color1);
}
.profileInfo__userName--edit{
    display: flex;
}
.profileInfo__userName--edit > input{
    flex-grow: 2;
    margin: 0 0 0 5px;
}

.profileInfo__userAttribute{
    display: flex;
    margin-bottom: 30px;
}
.profileInfo__userAttribute > span{
    margin-left: 5px;
    cursor:pointer;
}
.profileInfo__userAttribute > span:hover:after{
    content: "✎"
}
.profileInfo__userAttribute > span:hover{
    color: var(--color4);
}
.profileInfo__userAttribute > input{
    flex-grow: 2;
    margin: 0px 0px -2px 5px;
}
.profileInfo__userAttribute > label{
    font-weight: bold;
    white-space: nowrap;
}

.profileInfo__logout{
    cursor: pointer;
    font-size: 20px;
}
.profileInfo__logout:hover{
    color: var(--color4);
}

/* profileAssets */
.profileAssets{
    flex-grow: 1;
}
.profileAssets__collection{
    display: flex;
    flex-wrap: wrap;
    padding: 5%;
    justify-content: center;
}
.profileAssets__header{
    text-align: right;
    margin-bottom: 30px;
}
.profileAssets__headerItem{
    text-transform: uppercase;
    display: inline-block;
    font-size: 18px;
    margin-left: 30px;
}
.profileAssets__headerItem:hover{
    color: var(--color5);
    cursor: pointer;
}
.profileAssets__headerItem--current{
    font-weight: bold;
    color: var(--color4);
}
.profileAssets__collectionItem{
    flex-basis: 50%;
}
.accountContent__wrapper{
    width: calc(100% - 16px);
}

/* lotAssets */
.lotAsset__title{
    display: inline-block;
    margin-bottom: 50px;
    position: relative;
    padding-bottom: 15px;
    width: 50%;
    vertical-align: top;
}
.lotAsset__title:before{
    content: "";
    width: 65px;
    height: 1px;
    border-bottom: 1px solid var(--color1);
    position: absolute;
    bottom: 0;
}
.lotAsset__wrapper{
    display: flex;
    flex-wrap: wrap;
}
.lotAsset__content{
    display: flex;
    flex-basis: 75%;
    text-align: center;
}
.lotAsset__name{
    position: relative;
    padding-bottom: 8px;
}
.lotAsset__name:before{
    content: "";
    width: 25px;
    height: 1px;
    border-bottom: 1px solid var(--color1);
    position: absolute;
    bottom: 0;
}
.lotAsset__attribute{
    margin-bottom: 10px;
}
.lotAsset__details{
    flex-basis: 50%;
    text-align: left;
    padding: 30px;
}
.lotAsset__viewer{
    flex-basis: 50%;
    position: relative;
}
.lotAsset__auction{
    flex-basis: 25%;
    padding-top: 30px;
    text-align: right;
}
.lotAsset__model{
    display: block;
    height: auto;
    background-color: var(--color1);
    width: 100%;
    padding-bottom: 108%;
}
.lotAsset__modelShare{
    margin: 0 5px;
    position: relative;
}
.lotAsset__shareInput{
    position: absolute;
    left: -999em;
}
.lotAsset__linkouts{
    display: inline-block;
    text-align: right;
    font-size: 24px;
    width: calc(50% - 7px);
    padding-left: 0px;
    font-weight: bold;
}
.lotAsset__linkouts li{
    display: inline-block;
    margin-left: 10px;
}
.lotAsset__tags{
    display: block;
}
.collectionItem__modelViewerWrapper{
    position: relative;
    padding-top: 100%;
}
.collectionItem__modelViewerWrapper > model-viewer{
    position: absolute;
    top: 5%;
    left: 5%;
    width: 90%;
    height: 90%;
}
.collectionItem__facePreview{
    position: absolute; 
    bottom: 5px;
    right: 5px;
}
.collectionItem__attributes{
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    align-items: center;
}

.collectionItem__wrapper{
    margin: 10% 10% 20% 10%;

}
.collectionItem__artist{
    flex-basis: 100%;
}
.collectionItem__link{
    cursor: pointer;
    text-transform: uppercase;
}

.market__collection{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-right: calc(-5% + 16px);
    margin-left: calc(-5% + 16px);
}
.market__collectionItem{
    flex-basis: 33%;
} 
.market__banner{
    display: block;
    width: 100%;
    padding-left: 5%;
    padding-right: 5%; 

}
.market__bannerImage{
    width: 100%;
}
.market__heading{
    float: left;
    position: relative;
    padding-bottom: 10px;
    margin-bottom: 30px;
}
.market__heading:after{
    content: "";
    width: 65px;
    height: 1px;
    border-bottom: 1px solid var(--color1);
    position: absolute;
    bottom: 0;
    left: 10px;
}
.loginOption__wrapper{
    text-align: center;
    padding-top: 55px;
}
.loginOption__image{
    height: 200px;
}
.loginOption__image:hover{
    cursor: pointer;
}
.subhead__nav{
    list-style-type: none;
    float: right;
    padding-left: 0;
}
.subhead__navItem{
    font-weight: bold;
    text-transform: uppercase;
    display: inline-block;
    padding-left: 30px;
    font-size: 18px;
}
.subhead__navItem--active > a{
    color: var(--color1)
}
.auction__input{
    margin: 0;
    width: 100%;
    display: block;
    text-align: right;
    margin-bottom: 30px;
}
.auction__label{
    display: block;
    margin-bottom: 5px;
}
/* ... */

